logo.y
%{
	#include <stdlib.h>
	#include <stdio.h>
	#include <ctype.h>
	#include <string.h>
	#include "structures.h"
	#include "hashFunctions.h"

	int addressG = 0;
	extern int height = 100, width = 100, xpos = 40, ypos = 40, raio = 5;
	extern Direccao direccao = up;

	extern ListaVars *nodo;
	extern VarHashTable varHashTable;

%}
%error-verbose

/*%token ARRAY SIZE*/
%token PROGRAM DECLARATIONS STATEMENTS ARROW INTEGER BOOLEAN STRING FORWARD BACKWARD RRIGHT RLEFT
%token PEN UP DOWN GOTO WHERE OR AND POW EQUAL DIF MINOREQUAL MAJOREQUAL IN SAY ASK IF THEN ELSE WHILE
%token <stringvalue>TRUE FALSE IDENTIFIER NUMBER STR SUCC PRED

%left MINOR MAJOR MINOREQUAL MAJOREQUAL EQUAL AND POW DIF OR
%left '+' '-'
%left '*' '/'


/* TODO verficiar depois o que é e nao é preciso */
%type <stringvalue>SuccPred
%type <intvalue>Type SuccOrPred Add_Op Mul_Op Rel_Op Factor Term Single_Expression Array_Acess Expression
%type <varTipo>Var Variable
%type <constTipo>Constant Value_Var Inic_Var

%union{
	int intvalue;
	char* stringvalue;
	VarTipo varTipo;
	ConstTipo constTipo;
}



%start Liss

%%

/***************************Program**************/

Liss 			: PROGRAM IDENTIFIER '{' Body '}' {printf("STOP\n");}
			;
	
Body 			: DECLARATIONS 	{
							varHashTable = initHash();
							/*char buffer[10];
							VarTipo var;// = (VarTipo) malloc (sizeof(VarTipo));
							strcpy(var.id, "height");
							sprintf(buffer, "%d", height);
							//itoa(height, buffer, 10);
							strcpy(var.value, buffer);
							var.type = 0;
							insertInListaVars(var, 1);
							strcpy(var.id, "widht");
							sprintf(buffer, "%d", width);
							//itoa(width, buffer, 10);
							strcpy(var.value, buffer);
							var.type = 0;
							insertInListaVars(var, 0);
							strcpy(var.id, "xpos");
							sprintf(buffer, "%d", xpos);
							//itoa(xpos, buffer, 10);
							strcpy(var.value, buffer);
							var.type = 0;
							insertInListaVars(var, 0);
							strcpy(var.id, "ypos");
							sprintf(buffer, "%d", ypos);
							//itoa(ypos, buffer, 10);
							strcpy(var.value, buffer);
							var.type = 0;
							insertInListaVars(var, 0);
							strcpy(var.id, "raio");
							sprintf(buffer, "%d", raio);
							//itoa(raio, buffer, 10);
							strcpy(var.value, buffer);
							insertInListaVars(var, 0);
							saveVars(0);*/
							printf("START\n");
							drawTurtle();
							printf("REFRESH\n");
							}Declarations

 			  STATEMENTS {printHash();} Statements
			;


/***************************Declarations**************/

Declarations		: Declaration
			| Declarations Declaration
			;
	
Declaration 		: Variable_Declaration
			;


/***************************Declarations: Variables**************/

Variable_Declaration 	: Vars ARROW Type ';' 	{saveVars($3);}
			;

Vars 			: Var 	{insertInListaVars($1, 1);
				}
			| Vars ',' Var 	{insertInListaVars($3, 0);
					}
			;

Var 			: IDENTIFIER Value_Var { 
							$$.id=$1;
							$$.type=$2.type;
							if ($2.type != -1) {
								$$.value=$2.value;
							}
					       }
			;
	
Value_Var 		: {$$.type=-1;}
			| '=' Inic_Var {$$=$2;}
			;

Type 			: INTEGER {$$ = 0;}
			| BOOLEAN {$$ = 1;}	
			| STRING  {$$ = 2;}
			/*| ARRAY SIZE NUMBER*/
			;
	
Inic_Var 		: Constant {$$ = $1;}
			/*| Array_Definition*/
			;
	
Constant	 	: '(' NUMBER ')' {$$.value = $2; $$.type=0;}/* TODO so pus estes parentises aqui porque ha exemplos em que aparecem la */
			| STR 	 {$$.value = $1; $$.type=2;}
			| TRUE   {$$.value = $1; $$.type=1;}
			| FALSE  {$$.value = $1; $$.type=1;}
			;
	

/***************************Declarations: Variables: Array_Definition**************/


/*
Array_Definition 	: '[' Array_Initialization ']'
			;
	
Array_Initialization 	: Elem
			| Array_Initialization ',' Elem
			;
	
Elem 			: NUMBER
			;
*/	


/***************************Statements**************/

Statements 		: Statement ';'
			| Statements Statement ';'
			;
	
Statement 		: Turtle_Commands
			| Assignment
			| Conditional_Statement
			| Iterative_Statement
			;
	

/***************************Turtle Statement**************/


Turtle_Commands 	: Step
			| Rotate
			| Mode
			| Dialogue
			| Location
			;

Step 			: FORWARD Expression 			{
								VarData aux;
								switch(direccao){
									case(up):
										aux = searchVar("xpos");
										printf("load %d\n", aux->address);
										printf("pushi %d\n", $2);
										printf("ADD\n");
										printf("storeg %d\n", aux->address);
										drawTurtle();
									}
								}
			| BACKWARD Expression
			;

Rotate 			: RRIGHT
			| RLEFT
			;
	
Mode 			: PEN UP
			| PEN DOWN
			;
	
Dialogue 		: Say_Statement
			| Ask_Statement
			;
	
Location 		: GOTO NUMBER ',' NUMBER
			| WHERE '?'
			;
	

/***************************Assignment Statement**************/


Assignment 		: Variable '=' Expression 	{
								VarData var =  searchVar($1.id);
								if (var) printf("store %d",var->address); //nao sei qual store usar
							}
			;
	
Variable 		: IDENTIFIER Array_Acess {$$.id = $1;}
			;
	
Array_Acess 		:
			| '[' Single_Expression ']'		{ $$ = $2; }
			;
	

/***************************Expression**************/

Expression 		: Single_Expression			{ $$ = $1; }
			| Expression Rel_Op Single_Expression	{
								switch($2){
									case(1):
										printf("pushi %d\n", ($1 == $3));
										$$ = ($1 == $3);
										break;
									case(2):
										printf("pushi %d\n", ($1 != $3));
										$$ = ($1 != $3);
										break;
									case(3):
										printf("pushi %d\n", $1);
										printf("pushi %d\n", $3);
										printf("SUP\n");
										$$ = ($1 > $3);
										break;
									case(4):
										printf("pushi %d\n", $1);
										printf("pushi %d\n", $3);
										printf("INF\n");
										$$ = ($1 < $3);
										break;
									case(5):
										printf("pushi %d\n", $1);
										printf("pushi %d\n", $3);
										printf("SUPEQ\n");
										$$ = ($1 >= $3);
										break;
									case(6):
										printf("pushi %d\n", $1);
										printf("pushi %d\n", $3);
										printf("INFEQ\n");
										$$ = ($1 <= $3);
										break;
									default:				//TODO ver o que faz o in, que acho que e para arrays...
										yyerror("Unknown operation\n");
										break;
									
								}
								}
			;
	

/***************************Single Expression**************/

Single_Expression 	: Term					{ $$ = $1; }
			| Single_Expression Add_Op Term		{
								printf("pushi %d\n", $1);
								printf("pushi %d\n", $3);
								switch($2){
									case(1):
										printf("add\n");
										break;
									case(2):
										printf("sub\n");
										break;
									case(3):
										printf("pop 2\n");
										if($1 > 0 || $3 > 0) printf("pushi 1\n");
										else printf("pushi 0\n");
										break;
									default:
										yyerror("Unknown operation\n");
										break;
								}
								}
			;



Term 			: Factor				{ $$ = $1; }
			| Term Mul_Op Factor			{
								printf("pushi %d\n", $1);
								printf("pushi %d\n", $3); 
								switch($2){
									case(1):
										printf("mul\n");
										break;
									case(2):
										if($3 == 0){
											yyerror("Divide by 0\n");
											exit(0);
										}
										printf("div \n");
										break;
									case(3):
										printf("pop 2\n");
										if($1 > 0 && $3 > 0) printf("pushi 1\n");    //Maior que 0 ou diferente de 0???
										else printf("pushi 0\n");
									case(4):
										printf("pop 1\n");  //Para retirar o $3
										while($3 > 1){
											printf("pushi %d\n", $1);
											printf("mul\n");
											$3--;
										}
									default:
										yyerror("Unknown operation\n");
										break;
									}
								}
			;	


/***************************Term**************/

Factor 			: Constant				{ /*TabelaHash *const = procuraLista($1);    ->   PROCURAR A VARIAVEL NA TABELA DE HASH*/
								  $$ = atoi($1.value);       //atoi(const.value);



								  /*$$->consttipo.value = $1.value;
								  $$->consttipo.type = $1.type;*/
								}
			| Variable				{ /*TabelaHash *var = procuraLista($1);*/
								  $$ = atoi($1.value);    //UMA VEZ MAIS, SEM QUALQUER CERTEZA DISTO

/***************************Factor**************/



								  /*$$->vartipo.id = $1.id; 
								  $$->vartipo.value = $1.value;
								  $$->vartipo.type = $1.type;*/
								}
			| SuccOrPred		{ $$ = $1; }
			| '(' Expression ')'	{ $$ = $2; }
			;
	

/***************************Operators**************/

Add_Op  		: '+'			{ $$ = 1; }
			| '-'			{ $$ = 2; }
			| OR			{ $$ = 3; }
			;
	
Mul_Op 			: '*'			{ $$ = 1; }
			| '/'			{ $$ = 2; }
			| AND			{ $$ = 3; }
			| POW			{ $$ = 4; }
			;
	 
Rel_Op 			: EQUAL			{ $$ = 1; }
			| DIF 			{ $$ = 2; }
			| MAJOR 		{ $$ = 3; }
			| MINOR			{ $$ = 4; }
			| MAJOREQUAL		{ $$ = 5; }
			| MINOREQUAL		{ $$ = 6; }
			/*| IN			{ $$ = $1; }*/       //PENSO QUE SEJA SO PARA ARRAYS
			;
	

/***************************SuccOrPred**************/

SuccOrPred 		: SuccPred IDENTIFIER		{ VarData var = searchVar($2);
							  printf("store %d\n", var->address);
							  printf("pushi %d\n", atoi($1));
							  printf("add\n");
							}
			;
	
SuccPred 		: SUCC				{ $$ = "1"; }
			| PRED				{ $$ = "-1"; }
			;


/***************************IO Statements***********/
	
Say_Statement 		: SAY '(' Expression ')'		{ printf("writei\n"); }
			;
	
Ask_Statement 		: ASK '(' STR ',' Variable ')'		{ 
							          printf("pushs %s\n",$3); 	// guardar na stack a STR a perguntar
								  printf("writes\n"); 		// escrever a STR a perguntar
							 	  printf("read\n"); 		/* lê uma string do teclado (concluída por um "\n") 
										       		   e arquiva esta string (sem o "\n") na heap e coloca
                                                                                       		   (empilha) o endereço na pilha..
									            		*/
								  printf("atoi\n"); 		// variaveis só podem ser integer ou boolean 	
								  if(!searchVar($5.id)) { printf("Err Variavel %s não existe\n",$5.id);}
								  else {	
								  	ListaVars *aux = nodo;
								  	VarData var = searchVar($5.id);
								  	printf("storeg %d\n",var->address); // pode ser storef se for uma variavel local								  
								  }	
								}
			;
	

/***************************Consitional & Iterative Statements*******/

Conditional_Statement	: IfThenElse_Stat
			;
	
Iterative_Statement 	: While_Stat
			;
	

/***************************IfThenElse_Stat*********/

IfThenElse_Stat 	: IF Expression THEN '{' Statements '}' Else_Expression
			;	

Else_Expression 	:
			| ELSE '{' Statements '}'
			;
	

/***************************While_Stat**************/

While_Stat 		: WHILE '(' Expression ')' '{' Statements '}'
			;

%%

void insertInListaVars(VarTipo var, int first){
	ListaVars *aux = (ListaVars*)malloc(sizeof(ListaVars));
	aux->id = var.id;
	aux->value = var.value;
	aux->type = var.type;
	if(first == 1){aux->next = NULL;}
	else {aux->next = nodo;}
	nodo = aux;
	
}

void saveVars(int type){
	//printListaVars();

	ListaVars *aux = nodo;
	while(aux) {
		if(!searchVar(aux->id)){
			// insere nome, tipo e address na hashtable
			insertVar(aux->id, type, addressG);
			switch(type) {
				case 0://INTEGER
					if (aux->type == -1) {//VAZIO
						printf("pushi 0\n");
					}
					else {
						printf("pushi %d\n",atoi(aux->value));
					}
				break;
				case 1://BOOLEAN
					if (aux->type==-1 || strcmp(aux->value,"TRUE")==0) {
						printf("pushi 1\n");
					}
					else if (strcmp(aux->value, "FALSE")==0) {
						printf("pushi 0\n");
					}
				break;
				case 2://STRING
					if (aux->type == -1) {
						printf("pushs \"\"\n");
					}
					else {
						printf("pushs %s\n",aux->value);
					}
				break;
				// nao estamos a fazer arrays para ja
			}
			addressG++;
		}
		aux=aux->next;
	}
	nodo = NULL;

}

/*char *stringToUpper(char* string){
	int i;
	char* new;
	for (i=0; i<strlen(string); i++)
		new[i]=toupper(string[i]);
	return new;
}*/

void drawTurtle(){
	VarData aux, aux2, aux3;
	aux = searchVar("raio");
	printf("load %d\n", aux->address);
	aux2 = searchVar("ypos");
        printf("load %d\n", aux->address);
	aux3 = searchVar("xpos");
        printf("load %d\n", aux->address);
	printf("DRAWCIRCLE\n");
	printf("REFRESH\n");
	printf("storeg %d\n", aux3->address);
	printf("storeg %d\n", aux2->address);
	printf("storeg %d\n", aux->address);
}


void printListaVars(){
	ListaVars *aux = nodo;
	while(aux){
		printf("NODO: id=%s\tvalue=%s\ttype=%d\n",aux->id,aux->value,aux->type);
		aux = aux->next;
	}
	printf("ACABOU\n");
}

int yyerror(char *s){
	fprintf(stderr, "ERRO: %s \n", s);
	return 0;
}

int main() {
	yyparse();
	return 0;
}	
