y.output
Terminals unused in grammar

   IN


Gramática

    0 $accept: Liss $end

    1 Liss: PROGRAM IDENTIFIER '{' Body '}'

    2 $@1: /* vazio */

    3 $@2: /* vazio */

    4 Body: DECLARATIONS Declarations $@1 STATEMENTS $@2 Statements

    5 Declarations: Declaration
    6             | Declarations Declaration

    7 Declaration: Variable_Declaration

    8 Variable_Declaration: Vars ARROW Type ';'

    9 Vars: Var
   10     | Vars ',' Var

   11 Var: IDENTIFIER Value_Var

   12 Value_Var: /* vazio */
   13          | '=' Inic_Var

   14 Type: INTEGER
   15     | BOOLEAN
   16     | STRING

   17 Inic_Var: Constant

   18 Constant: '(' NUMBER ')'
   19         | STR
   20         | TRUE
   21         | FALSE

   22 Statements: Statement ';'
   23           | Statements Statement ';'

   24 Statement: Turtle_Commands
   25          | Assignment
   26          | Conditional_Statement
   27          | Iterative_Statement

   28 Turtle_Commands: Step
   29                | Rotate
   30                | Mode
   31                | Dialogue
   32                | Location

   33 Step: FORWARD Expression
   34     | BACKWARD Expression

   35 Rotate: RRIGHT
   36       | RLEFT

   37 Mode: PEN UP
   38     | PEN DOWN

   39 Dialogue: Say_Statement
   40         | Ask_Statement

   41 Location: GOTO NUMBER ',' NUMBER
   42         | WHERE '?'

   43 Assignment: Variable '=' Expression

   44 Variable: IDENTIFIER Array_Acess

   45 Array_Acess: /* vazio */
   46            | '[' Single_Expression ']'

   47 Expression: Single_Expression
   48           | Expression Rel_Op Single_Expression

   49 Single_Expression: Term
   50                  | Single_Expression Add_Op Term

   51 Term: Factor
   52     | Term Mul_Op Factor

   53 Factor: Constant
   54       | Variable
   55       | SuccOrPred
   56       | '(' Expression ')'

   57 Add_Op: '+'
   58       | '-'
   59       | OR

   60 Mul_Op: '*'
   61       | '/'
   62       | AND
   63       | POW

   64 Rel_Op: EQUAL
   65       | DIF
   66       | MAJOR
   67       | MINOR
   68       | MAJOREQUAL
   69       | MINOREQUAL

   70 SuccOrPred: SuccPred IDENTIFIER

   71 SuccPred: SUCC
   72         | PRED

   73 Say_Statement: SAY '(' Expression ')'

   74 Ask_Statement: ASK '(' STR ',' Variable ')'

   75 Conditional_Statement: IfThenElse_Stat

   76 Iterative_Statement: While_Stat

   77 IfThenElse_Stat: IF Expression THEN '{' Statements '}' Else_Expression

   78 Else_Expression: /* vazio */
   79                | ELSE '{' Statements '}'

   80 While_Stat: WHILE '(' Expression ')' '{' Statements '}'


Terminais, com as regras aonde aparecem

$end (0) 0
'(' (40) 18 56 73 74 80
')' (41) 18 56 73 74 80
'*' (42) 60
'+' (43) 57
',' (44) 10 41 74
'-' (45) 58
'/' (47) 61
';' (59) 8 22 23
'=' (61) 13 43
'?' (63) 42
'[' (91) 46
']' (93) 46
'{' (123) 1 77 79 80
'}' (125) 1 77 79 80
error (256)
PROGRAM (258) 1
DECLARATIONS (259) 4
STATEMENTS (260) 4
ARROW (261) 8
INTEGER (262) 14
BOOLEAN (263) 15
STRING (264) 16
FORWARD (265) 33
BACKWARD (266) 34
RRIGHT (267) 35
RLEFT (268) 36
PEN (269) 37 38
UP (270) 37
DOWN (271) 38
GOTO (272) 41
WHERE (273) 42
OR (274) 59
AND (275) 62
POW (276) 63
EQUAL (277) 64
DIF (278) 65
MINOREQUAL (279) 69
MAJOREQUAL (280) 68
IN (281)
SAY (282) 73
ASK (283) 74
IF (284) 77
THEN (285) 77
ELSE (286) 79
WHILE (287) 80
TRUE (288) 20
FALSE (289) 21
IDENTIFIER (290) 1 11 44 70
NUMBER (291) 18 41
STR (292) 19 74
SUCC (293) 71
PRED (294) 72
MAJOR (295) 66
MINOR (296) 67


Não-terminais, com as regras aonde aparecem

$accept (56)
    à esquerda: 0
Liss (57)
    à esquerda: 1, à direita: 0
Body (58)
    à esquerda: 4, à direita: 1
$@1 (59)
    à esquerda: 2, à direita: 4
$@2 (60)
    à esquerda: 3, à direita: 4
Declarations (61)
    à esquerda: 5 6, à direita: 4 6
Declaration (62)
    à esquerda: 7, à direita: 5 6
Variable_Declaration (63)
    à esquerda: 8, à direita: 7
Vars (64)
    à esquerda: 9 10, à direita: 8 10
Var (65)
    à esquerda: 11, à direita: 9 10
Value_Var (66)
    à esquerda: 12 13, à direita: 11
Type (67)
    à esquerda: 14 15 16, à direita: 8
Inic_Var (68)
    à esquerda: 17, à direita: 13
Constant (69)
    à esquerda: 18 19 20 21, à direita: 17 53
Statements (70)
    à esquerda: 22 23, à direita: 4 23 77 79 80
Statement (71)
    à esquerda: 24 25 26 27, à direita: 22 23
Turtle_Commands (72)
    à esquerda: 28 29 30 31 32, à direita: 24
Step (73)
    à esquerda: 33 34, à direita: 28
Rotate (74)
    à esquerda: 35 36, à direita: 29
Mode (75)
    à esquerda: 37 38, à direita: 30
Dialogue (76)
    à esquerda: 39 40, à direita: 31
Location (77)
    à esquerda: 41 42, à direita: 32
Assignment (78)
    à esquerda: 43, à direita: 25
Variable (79)
    à esquerda: 44, à direita: 43 54 74
Array_Acess (80)
    à esquerda: 45 46, à direita: 44
Expression (81)
    à esquerda: 47 48, à direita: 33 34 43 48 56 73 77 80
Single_Expression (82)
    à esquerda: 49 50, à direita: 46 47 48 50
Term (83)
    à esquerda: 51 52, à direita: 49 50 52
Factor (84)
    à esquerda: 53 54 55 56, à direita: 51 52
Add_Op (85)
    à esquerda: 57 58 59, à direita: 50
Mul_Op (86)
    à esquerda: 60 61 62 63, à direita: 52
Rel_Op (87)
    à esquerda: 64 65 66 67 68 69, à direita: 48
SuccOrPred (88)
    à esquerda: 70, à direita: 55
SuccPred (89)
    à esquerda: 71 72, à direita: 70
Say_Statement (90)
    à esquerda: 73, à direita: 39
Ask_Statement (91)
    à esquerda: 74, à direita: 40
Conditional_Statement (92)
    à esquerda: 75, à direita: 26
Iterative_Statement (93)
    à esquerda: 76, à direita: 27
IfThenElse_Stat (94)
    à esquerda: 77, à direita: 75
Else_Expression (95)
    à esquerda: 78 79, à direita: 77
While_Stat (96)
    à esquerda: 80, à direita: 76


estado 0

    0 $accept: . Liss $end

    PROGRAM  fazer shift, e ir para o estado 1

    Liss  ir para o estado 2


estado 1

    1 Liss: PROGRAM . IDENTIFIER '{' Body '}'

    IDENTIFIER  fazer shift, e ir para o estado 3


estado 2

    0 $accept: Liss . $end

    $end  fazer shift, e ir para o estado 4


estado 3

    1 Liss: PROGRAM IDENTIFIER . '{' Body '}'

    '{'  fazer shift, e ir para o estado 5


estado 4

    0 $accept: Liss $end .

    $default  aceitar


estado 5

    1 Liss: PROGRAM IDENTIFIER '{' . Body '}'

    DECLARATIONS  fazer shift, e ir para o estado 6

    Body  ir para o estado 7


estado 6

    4 Body: DECLARATIONS . Declarations $@1 STATEMENTS $@2 Statements

    IDENTIFIER  fazer shift, e ir para o estado 8

    Declarations          ir para o estado 9
    Declaration           ir para o estado 10
    Variable_Declaration  ir para o estado 11
    Vars                  ir para o estado 12
    Var                   ir para o estado 13


estado 7

    1 Liss: PROGRAM IDENTIFIER '{' Body . '}'

    '}'  fazer shift, e ir para o estado 14


estado 8

   11 Var: IDENTIFIER . Value_Var

    '='  fazer shift, e ir para o estado 15

    $default  reduzir usando a regra 12 (Value_Var)

    Value_Var  ir para o estado 16


estado 9

    4 Body: DECLARATIONS Declarations . $@1 STATEMENTS $@2 Statements
    6 Declarations: Declarations . Declaration

    IDENTIFIER  fazer shift, e ir para o estado 8

    $default  reduzir usando a regra 2 ($@1)

    $@1                   ir para o estado 17
    Declaration           ir para o estado 18
    Variable_Declaration  ir para o estado 11
    Vars                  ir para o estado 12
    Var                   ir para o estado 13


estado 10

    5 Declarations: Declaration .

    $default  reduzir usando a regra 5 (Declarations)


estado 11

    7 Declaration: Variable_Declaration .

    $default  reduzir usando a regra 7 (Declaration)


estado 12

    8 Variable_Declaration: Vars . ARROW Type ';'
   10 Vars: Vars . ',' Var

    ARROW  fazer shift, e ir para o estado 19
    ','    fazer shift, e ir para o estado 20


estado 13

    9 Vars: Var .

    $default  reduzir usando a regra 9 (Vars)


estado 14

    1 Liss: PROGRAM IDENTIFIER '{' Body '}' .

    $default  reduzir usando a regra 1 (Liss)


estado 15

   13 Value_Var: '=' . Inic_Var

    TRUE   fazer shift, e ir para o estado 21
    FALSE  fazer shift, e ir para o estado 22
    STR    fazer shift, e ir para o estado 23
    '('    fazer shift, e ir para o estado 24

    Inic_Var  ir para o estado 25
    Constant  ir para o estado 26


estado 16

   11 Var: IDENTIFIER Value_Var .

    $default  reduzir usando a regra 11 (Var)


estado 17

    4 Body: DECLARATIONS Declarations $@1 . STATEMENTS $@2 Statements

    STATEMENTS  fazer shift, e ir para o estado 27


estado 18

    6 Declarations: Declarations Declaration .

    $default  reduzir usando a regra 6 (Declarations)


estado 19

    8 Variable_Declaration: Vars ARROW . Type ';'

    INTEGER  fazer shift, e ir para o estado 28
    BOOLEAN  fazer shift, e ir para o estado 29
    STRING   fazer shift, e ir para o estado 30

    Type  ir para o estado 31


estado 20

   10 Vars: Vars ',' . Var

    IDENTIFIER  fazer shift, e ir para o estado 8

    Var  ir para o estado 32


estado 21

   20 Constant: TRUE .

    $default  reduzir usando a regra 20 (Constant)


estado 22

   21 Constant: FALSE .

    $default  reduzir usando a regra 21 (Constant)


estado 23

   19 Constant: STR .

    $default  reduzir usando a regra 19 (Constant)


estado 24

   18 Constant: '(' . NUMBER ')'

    NUMBER  fazer shift, e ir para o estado 33


estado 25

   13 Value_Var: '=' Inic_Var .

    $default  reduzir usando a regra 13 (Value_Var)


estado 26

   17 Inic_Var: Constant .

    $default  reduzir usando a regra 17 (Inic_Var)


estado 27

    4 Body: DECLARATIONS Declarations $@1 STATEMENTS . $@2 Statements

    $default  reduzir usando a regra 3 ($@2)

    $@2  ir para o estado 34


estado 28

   14 Type: INTEGER .

    $default  reduzir usando a regra 14 (Type)


estado 29

   15 Type: BOOLEAN .

    $default  reduzir usando a regra 15 (Type)


estado 30

   16 Type: STRING .

    $default  reduzir usando a regra 16 (Type)


estado 31

    8 Variable_Declaration: Vars ARROW Type . ';'

    ';'  fazer shift, e ir para o estado 35


estado 32

   10 Vars: Vars ',' Var .

    $default  reduzir usando a regra 10 (Vars)


estado 33

   18 Constant: '(' NUMBER . ')'

    ')'  fazer shift, e ir para o estado 36


estado 34

    4 Body: DECLARATIONS Declarations $@1 STATEMENTS $@2 . Statements

    FORWARD     fazer shift, e ir para o estado 37
    BACKWARD    fazer shift, e ir para o estado 38
    RRIGHT      fazer shift, e ir para o estado 39
    RLEFT       fazer shift, e ir para o estado 40
    PEN         fazer shift, e ir para o estado 41
    GOTO        fazer shift, e ir para o estado 42
    WHERE       fazer shift, e ir para o estado 43
    SAY         fazer shift, e ir para o estado 44
    ASK         fazer shift, e ir para o estado 45
    IF          fazer shift, e ir para o estado 46
    WHILE       fazer shift, e ir para o estado 47
    IDENTIFIER  fazer shift, e ir para o estado 48

    Statements             ir para o estado 49
    Statement              ir para o estado 50
    Turtle_Commands        ir para o estado 51
    Step                   ir para o estado 52
    Rotate                 ir para o estado 53
    Mode                   ir para o estado 54
    Dialogue               ir para o estado 55
    Location               ir para o estado 56
    Assignment             ir para o estado 57
    Variable               ir para o estado 58
    Say_Statement          ir para o estado 59
    Ask_Statement          ir para o estado 60
    Conditional_Statement  ir para o estado 61
    Iterative_Statement    ir para o estado 62
    IfThenElse_Stat        ir para o estado 63
    While_Stat             ir para o estado 64


estado 35

    8 Variable_Declaration: Vars ARROW Type ';' .

    $default  reduzir usando a regra 8 (Variable_Declaration)


estado 36

   18 Constant: '(' NUMBER ')' .

    $default  reduzir usando a regra 18 (Constant)


estado 37

   33 Step: FORWARD . Expression

    TRUE        fazer shift, e ir para o estado 21
    FALSE       fazer shift, e ir para o estado 22
    IDENTIFIER  fazer shift, e ir para o estado 48
    STR         fazer shift, e ir para o estado 23
    SUCC        fazer shift, e ir para o estado 65
    PRED        fazer shift, e ir para o estado 66
    '('         fazer shift, e ir para o estado 67

    Constant           ir para o estado 68
    Variable           ir para o estado 69
    Expression         ir para o estado 70
    Single_Expression  ir para o estado 71
    Term               ir para o estado 72
    Factor             ir para o estado 73
    SuccOrPred         ir para o estado 74
    SuccPred           ir para o estado 75


estado 38

   34 Step: BACKWARD . Expression

    TRUE        fazer shift, e ir para o estado 21
    FALSE       fazer shift, e ir para o estado 22
    IDENTIFIER  fazer shift, e ir para o estado 48
    STR         fazer shift, e ir para o estado 23
    SUCC        fazer shift, e ir para o estado 65
    PRED        fazer shift, e ir para o estado 66
    '('         fazer shift, e ir para o estado 67

    Constant           ir para o estado 68
    Variable           ir para o estado 69
    Expression         ir para o estado 76
    Single_Expression  ir para o estado 71
    Term               ir para o estado 72
    Factor             ir para o estado 73
    SuccOrPred         ir para o estado 74
    SuccPred           ir para o estado 75


estado 39

   35 Rotate: RRIGHT .

    $default  reduzir usando a regra 35 (Rotate)


estado 40

   36 Rotate: RLEFT .

    $default  reduzir usando a regra 36 (Rotate)


estado 41

   37 Mode: PEN . UP
   38     | PEN . DOWN

    UP    fazer shift, e ir para o estado 77
    DOWN  fazer shift, e ir para o estado 78


estado 42

   41 Location: GOTO . NUMBER ',' NUMBER

    NUMBER  fazer shift, e ir para o estado 79


estado 43

   42 Location: WHERE . '?'

    '?'  fazer shift, e ir para o estado 80


estado 44

   73 Say_Statement: SAY . '(' Expression ')'

    '('  fazer shift, e ir para o estado 81


estado 45

   74 Ask_Statement: ASK . '(' STR ',' Variable ')'

    '('  fazer shift, e ir para o estado 82


estado 46

   77 IfThenElse_Stat: IF . Expression THEN '{' Statements '}' Else_Expression

    TRUE        fazer shift, e ir para o estado 21
    FALSE       fazer shift, e ir para o estado 22
    IDENTIFIER  fazer shift, e ir para o estado 48
    STR         fazer shift, e ir para o estado 23
    SUCC        fazer shift, e ir para o estado 65
    PRED        fazer shift, e ir para o estado 66
    '('         fazer shift, e ir para o estado 67

    Constant           ir para o estado 68
    Variable           ir para o estado 69
    Expression         ir para o estado 83
    Single_Expression  ir para o estado 71
    Term               ir para o estado 72
    Factor             ir para o estado 73
    SuccOrPred         ir para o estado 74
    SuccPred           ir para o estado 75


estado 47

   80 While_Stat: WHILE . '(' Expression ')' '{' Statements '}'

    '('  fazer shift, e ir para o estado 84


estado 48

   44 Variable: IDENTIFIER . Array_Acess

    '['  fazer shift, e ir para o estado 85

    $default  reduzir usando a regra 45 (Array_Acess)

    Array_Acess  ir para o estado 86


estado 49

    4 Body: DECLARATIONS Declarations $@1 STATEMENTS $@2 Statements .
   23 Statements: Statements . Statement ';'

    FORWARD     fazer shift, e ir para o estado 37
    BACKWARD    fazer shift, e ir para o estado 38
    RRIGHT      fazer shift, e ir para o estado 39
    RLEFT       fazer shift, e ir para o estado 40
    PEN         fazer shift, e ir para o estado 41
    GOTO        fazer shift, e ir para o estado 42
    WHERE       fazer shift, e ir para o estado 43
    SAY         fazer shift, e ir para o estado 44
    ASK         fazer shift, e ir para o estado 45
    IF          fazer shift, e ir para o estado 46
    WHILE       fazer shift, e ir para o estado 47
    IDENTIFIER  fazer shift, e ir para o estado 48

    $default  reduzir usando a regra 4 (Body)

    Statement              ir para o estado 87
    Turtle_Commands        ir para o estado 51
    Step                   ir para o estado 52
    Rotate                 ir para o estado 53
    Mode                   ir para o estado 54
    Dialogue               ir para o estado 55
    Location               ir para o estado 56
    Assignment             ir para o estado 57
    Variable               ir para o estado 58
    Say_Statement          ir para o estado 59
    Ask_Statement          ir para o estado 60
    Conditional_Statement  ir para o estado 61
    Iterative_Statement    ir para o estado 62
    IfThenElse_Stat        ir para o estado 63
    While_Stat             ir para o estado 64


estado 50

   22 Statements: Statement . ';'

    ';'  fazer shift, e ir para o estado 88


estado 51

   24 Statement: Turtle_Commands .

    $default  reduzir usando a regra 24 (Statement)


estado 52

   28 Turtle_Commands: Step .

    $default  reduzir usando a regra 28 (Turtle_Commands)


estado 53

   29 Turtle_Commands: Rotate .

    $default  reduzir usando a regra 29 (Turtle_Commands)


estado 54

   30 Turtle_Commands: Mode .

    $default  reduzir usando a regra 30 (Turtle_Commands)


estado 55

   31 Turtle_Commands: Dialogue .

    $default  reduzir usando a regra 31 (Turtle_Commands)


estado 56

   32 Turtle_Commands: Location .

    $default  reduzir usando a regra 32 (Turtle_Commands)


estado 57

   25 Statement: Assignment .

    $default  reduzir usando a regra 25 (Statement)


estado 58

   43 Assignment: Variable . '=' Expression

    '='  fazer shift, e ir para o estado 89


estado 59

   39 Dialogue: Say_Statement .

    $default  reduzir usando a regra 39 (Dialogue)


estado 60

   40 Dialogue: Ask_Statement .

    $default  reduzir usando a regra 40 (Dialogue)


estado 61

   26 Statement: Conditional_Statement .

    $default  reduzir usando a regra 26 (Statement)


estado 62

   27 Statement: Iterative_Statement .

    $default  reduzir usando a regra 27 (Statement)


estado 63

   75 Conditional_Statement: IfThenElse_Stat .

    $default  reduzir usando a regra 75 (Conditional_Statement)


estado 64

   76 Iterative_Statement: While_Stat .

    $default  reduzir usando a regra 76 (Iterative_Statement)


estado 65

   71 SuccPred: SUCC .

    $default  reduzir usando a regra 71 (SuccPred)


estado 66

   72 SuccPred: PRED .

    $default  reduzir usando a regra 72 (SuccPred)


estado 67

   18 Constant: '(' . NUMBER ')'
   56 Factor: '(' . Expression ')'

    TRUE        fazer shift, e ir para o estado 21
    FALSE       fazer shift, e ir para o estado 22
    IDENTIFIER  fazer shift, e ir para o estado 48
    NUMBER      fazer shift, e ir para o estado 33
    STR         fazer shift, e ir para o estado 23
    SUCC        fazer shift, e ir para o estado 65
    PRED        fazer shift, e ir para o estado 66
    '('         fazer shift, e ir para o estado 67
